Added require.js support to the mojo

--- a/mojo/src/main/resources/qunit.template.html
+++ b/mojo/src/main/resources/qunit.template.html
@@ -2,6 +2,7 @@
 <head>
     <script type="text/javascript" src="/qunit-mojo/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="/qunit-mojo/qunit-1.10.0.js"></script>
+    <script type="text/javascript" src="/qunit-mojo/require-2.1.1.min.js"></script>
     <link rel="stylesheet" href="/qunit-mojo/qunit-1.10.0.css" type="text/css" media="screen"/>
     
     <script type="text/javascript" src="YOUR_JAVASCRIPT_TEST_FILE_GOES_HERE"></script>
