Make it possible to specify location of requirejs config file

--- a/mojo/src/main/resources/qunit.template.html
+++ b/mojo/src/main/resources/qunit.template.html
@@ -3,13 +3,7 @@
     <script type="text/javascript" src="/qunit-mojo/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="/qunit-mojo/qunit-1.10.0.js"></script>
     <link rel="stylesheet" href="/qunit-mojo/qunit-1.10.0.css" type="text/css" media="screen"/>
-    <script type="text/javascript">
-	    var require = {
-	    		shim:{YOUR_REQUIRE_DOT_JS_SHIM_GOES_HERE}
-	    };
-    </script>
-    <script type="text/javascript" data-main="YOUR_JAVASCRIPT_TEST_FILE_GOES_HERE" src="/qunit-mojo/require-2.1.1.min.js"></script>
-    
+    YOUR_REQUIRE_DOT_JS_CONFIG_GOES_HERE
 </head>
 
 <body>
@@ -21,5 +15,7 @@
     <div id="qunit-testrunner-toolbar"></div>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
+    <script type="text/javascript" data-main="YOUR_JAVASCRIPT_TEST_FILE_GOES_HERE" src="/qunit-mojo/require-2.1.1.min.js"></script>
+
 </body>
 </html>
